libraries/ui/src/components/interaction/SidebarNav/SidebarNav.css
.sidebar-nav {
  width: 100%;
  max-height: 100%;
  padding-left: var(--gutter);
  padding-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  position: relative;
  --sidebar-collapsed-width: 74px;
  --easing: cubic-bezier(0.16, 1, 0.3, 1);
  transition: padding 300ms;

  ::-webkit-scrollbar {
    width: 0;
    background: transparent;
  }

  &.collapsed {
    @media (min-width: 768px) {
      width: var(--sidebar-collapsed-width);
    }

    li {

      @media (min-width: 768px) {
        a {
          width: 48px;
          overflow: hidden;

          &:hover {

            i {
              left: 8px;
            }
          }
        }

        i {
          left: 0;
        }
      }
      
    }

    .section {
      opacity: 0;
      height: 0;
      margin: 0;
    }
  }

  &.thin {

    .section {
      margin: 20px 0 10px;
      padding: 0 17px;
    }

    a, button {
      height: 36px;
      padding: 4px 17px;
      font-size: 13px;
      border-radius: 12px;
    }

    i {
      margin-right: 23px;
    }
  }

  &.overflow-enabled {

    @media (min-width: 768px) {
      height: 70vh;

      /* &:after {
        content: '';
        height: 40px;
        position: absolute;
        bottom: 30px;
        left: 0;
        right: 0;
        pointer-events: none;
        background: linear-gradient(transparent, var(--bg-2));
      } */

      &:hover {
      
        .sidebar-list {
          pointer-events: all;
        }
      }
      
      .sidebar-list {
        width: 230px;
        position: absolute;
        top: 9px;
        left: 20px;
        right: 0;
        bottom: 38px;
        pointer-events: none;
        overflow-y: scroll;
        overflow-x: visible;
      }

      .sidebar-nav-buttons {
        position: absolute;
        top: calc(100% - 20px);
      }
    }

  }

  li {

    &.active {

      a, button {
        background-color: var(--bg-3) !important;
      }
    }

    &.expand-label {
      
      a, button {
        background-color: var(--bg-3);
      }
    }

    a, button {
      width: 100%;
      height: 48px;
      margin-bottom: 10px;
      padding: 4px 23px;
      display: flex;
      align-items: center;
      color: var(--text-color-1);
      font-family: var(--font-family);
      font-size: 14px;
      font-weight: 500;
      border-radius: 19px;
      text-decoration: none;
      border: none;
      cursor: pointer;
      overflow: hidden;
      position: relative;
      white-space: nowrap;
      background-color: transparent;
      transition: 
        background-color var(--transition-speed-fast),
        width 600ms var(--easing);
      
      &:hover,
      &:focus {
        background-color: var(--bg-3);
      }
    }
    
    i {
      width: 48px;
      height: 100%;
      text-align: center;
      font-size: 18px;
      color: var(--text-color-3);
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      top: 0;
      left: 8px;
      transition: all 200ms;
    }

    span {
      margin-left: 45px;
    }
  }

  .section {
    margin: 30px 0 10px;
    padding: 0 23px;
    font-size: 12px;
    font-weight: 600;
    text-transform: uppercase;
    transition: margin 400ms, height 400ms, opacity 200ms;
  }

  @media (min-width: 768px) {

    &:before {
      content: '';
      position: absolute;
      top: 0;
      left: 10px;
      right: -4px;
      bottom: 6px;
      opacity: 0;
      border: 1px solid var(--border-color-3);
      border-radius: 24px;
      background-color: var(--bg-1);
      transition: all 400ms;
    }

    &.show-bg:before {
      opacity: 1;
    }

  }
}

.sidebar-nav-buttons {
  padding-left: 14px;

  button {
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }
  }

  &.collapsed {
    padding-left: 6px;
  }

  .toggle-collapse {
    width: 36px;
    height: 36px;
    border: none;
    border-radius: 100%;
    cursor: pointer;
    background: none;
    position: relative;
    transform: rotate(45deg);
    transition: transform 400ms;

    &.collapsed {
      transform: rotate(225deg);

      i.collapse {
        opacity: 0;
      }

      i.expand {
        opacity: 0.8;
      }
    }

    &.expanded {
      i.collapse {
        opacity: 0.8;
      }
      
      i.expand {
        opacity: 0;
      }
    }

    i {
      font-size: 18px;
      opacity: 0.8;
      color: var(--text-color-3);
      position: absolute;
      top: 9px;
      left: 10px;
      transition: opacity 20ms;
    }
  }
}

.toggle-mobile-nav {
  width: 56px;
  height: 56px;
  padding: 0;
  border-radius: 100%;
  border: none;
  position: fixed;
  align-items: center;
  justify-content: center;
  bottom: 15px;
  right: 15px;
  outline: none;
  box-shadow: var(--box-shadow-4);
  background-color: var(--accent-color);
  z-index: 1100000;
  display: none;

  i {
    width: auto;
    margin-right: 0;
    font-size: 20px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: white;
    transition: all 200ms;
    transform: rotate(180deg);
  }

  .when-open {
    opacity: 0;
  }

  .when-closed {
    opacity: 1;
  }
}

.sidebar-nav-mobile-overlay {
  width: 100vh;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  pointer-events: none;
  background-color: black;
  z-index: 9999;
  transition: all 700ms;

  &.mobile-open {
    pointer-events: all;
    opacity: .2;
  }
}

@media (max-width: 768px) {

  .sidebar-nav {
    width: 100vw;
    height: 100vh;
    padding: 0;
    display: flex;
    align-items: flex-end;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    overflow-y: auto;
    z-index: 10000;
    transition: transform 700ms cubic-bezier(0.76, 0, 0.24, 1);
    transform: translateY(100%);

    &.mobile-open {
      transform: translateY(0);
    }

    ul {
      width: 100%;
      max-height: 85%;
      overflow-y: auto;
      padding: 30px 30px 85px 30px;
      border-top-right-radius: 32px;
      border-top-left-radius: 32px;
      background-color: var(--bg-2);
    }
  }

  .sidebar-nav-buttons {
    display: none;
  }

  .toggle-mobile-nav {
    display: flex;

    &.mobile-open {

      i.when-open {
        opacity: 1;
        transform: rotate(0deg);
      }

      i.when-closed {
        opacity: 0;
        transform: rotate(0deg);
      }
    }
  }

}

